--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -4,18 +4,14 @@
   box-sizing: border-box;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
-:root {
-  --hue-neutral: ;
-  --hue-wrong: 0;
-  --hue-correct: 145;
-}
 
 body {
-  --hue: var(--hue-neutral);
   padding: 0;
   margin: 0;
-  background-color: hsl(var(--hue), 100%, 20%);
+  background-image: url("../images/background.jpeg");
+  /* filter: blur(8px); */
 }
+
 /* HEADER */
 header {
   font-weight: bolder;
@@ -38,10 +34,7 @@ main {
   border-radius: 5px;
   padding: 10px;
   box-shadow: 0 0 10px 2px;
-  display: inline-block;
-  /* justify-content: center;
-  align-items: center; */
-  /* background-color:rgb(202, 250, 250); */
+  /* display: inline-block; */
 }
 .question-container {
   width: 800px;
@@ -51,16 +44,10 @@ main {
   box-shadow: 0 0 10px 2px;
 }
 
-.buttongrid {
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  gap: 10px;
+.button {
+  display: block;
+  gap: 20px;
   margin: 20px 0;
-}
-.controls {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .hide {
@@ -74,4 +61,5 @@ footer {
   left: 0;
   right: 0;
   bottom: 3%;
+  font-weight: bolder;
 }
