--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -48,10 +48,20 @@ main {
   display: block;
   gap: 20px;
   margin: 20px 0;
+  font-size: 15px;
+}
+
+button:hover {
+  background-color: rgb(189, 253, 253);
 }
 
 .hide {
   display: none;
+}
+
+#highscore-list {
+  text-align: center;
+  list-style-position: inside;
 }
 
 /* FOOTER */
